--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_script:
   - travis_retry composer install --prefer-source --no-interaction --dev
 
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --configuration phpunit.xml --coverage-text
