--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
         }
     ],
     "require": {
-        "google/recaptcha": "^1.1",
-        "illuminate/support": "^5",
-        "illuminate/http": "^5"
+        "google/recaptcha": "^1.2",
+        "illuminate/support": "^5.8 || ^6.0 || ^7.24",
+        "illuminate/http": "^5.8 || ^6.0 || ^7.24"
     },
     "require-dev": {
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.8 | ~5.5"
+        "mockery/mockery": "^1.4",
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
@@ -48,5 +48,6 @@
     "scripts": {
         "test": "phpunit"
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
